# FSQL

./: .gitignore  FSQL.cabal  LICENSE  Makefile  README.md  Specification  docker-compose.yaml  dockerfile  package.yaml
src/: CLI.hs  Expr.hs  FSQL.hs  FileInfo.hs  Main.hs  Parser.hs  Query.hs  Regex.hs  TAGS  Version.hs
src/Debug/: Instances.hs
src/Expr/: TypeChecker.hs  Typed.hs  Untyped.hs
src/Parser/: Base.hs  Expr.hs  Lang.hs
