-- FSQL : FSQL.cabal -- Cabal file for FSQL
--
-- Copyright (C) 2015 gahag
-- All rights reserved.
--
-- This software may be modified and distributed under the terms
-- of the BSD license. See the LICENSE file for details.

name:                FSQL
version:             1.2
synopsis:            FSQL is a tool for performing queries on the local filesystem with syntax similar to SQL.
description:         FSQL : File System Query Language is a tool for performing queries on the local filesystem with syntax similar to SQL.
homepage:            https://github.com/gahag/FSQL
license:             BSD3
license-file:        LICENSE
author:              gahag
maintainer:          gabriel.s.b@live.com
copyright:           (C) 2015 gahag
category:            Database
build-type:          Simple
extra-doc-files:     Specification
cabal-version:       >=1.10

executable fsql
  main-is:             Main.hs
  other-modules:       FileInfo
                       Expr
                       Parser
                       Parser.Expr
                       Parser.Lang
                       Query
  other-extensions:    LambdaCase, TupleSections, RankNTypes
  build-depends:       base >=4.7 && <5.0, mtl >=2.2 && <2.3, regex-tdfa >=1.2 && <1.3, unix-compat >=0.4 && <0.5, time >=1.4 && <1.7, directory >=1.2 && <1.3, filepath >=1.3 && <1.5, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
